Starting mobile version

--- a/index.html
+++ b/index.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="dist/output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Academia Ibra</title>
 </head>
 
 <body>
+    <header class=" flex items-center justify-between py-1 px-1">
+        <img src="src/images/logo.jpeg" class="object-fill h-16" alt="">
+        <nav class="hidden">
+            <ul class="uppercase flex gap-x-2">
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Regulamento</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="text-white bg-red-600 py-1 px-2 rounded hidden">Inscreva-se</a>
+        <i class="fa-solid fa-bars pr-3 text-2xl"></i>
+        <!-- <i class="fa-solid fa-xmark"></i> -->
+    </header>
+
+    <main class="bg-slate-500">
+        <section class="pt-4">
+            <article class="mb-4">
+                <h2 class="font-bold text-center">Sobre o circuito</h2>
+                <p class="text-center">O Circuito Ibra de Tênis de Mesa & Ping Pong, foi criado com o intuito de massificar a modalidade em
+                    Pernambuco, sendo realizado através da Academia Ibra de Tênis de Mesa, primeiro clube especializado
+                    do interior do Estado que possui sede própria em Caruaru.</p>
+            </article>
+
+            <article class="mb-4">
+                <h2 class="font-bold text-center">História</h2>
+                <p class="text-center">O Circuito Ibra de Tênis de Mesa & Ping Pong, já aconteceu em 1999, 2000, 2001 e 2002, e entra agora
+                    para sua 5ª edição. Este evento foi o grande responsável pela popularização do Tênis de Mesa no
+                    interior do estado, sendo realizado ao longo das suas edições em várias cidades do interior,
+                    shoppings, com participação de atletas do interior, região metropolitana e de outros estados.</p>
+            </article>
+
+            <article class="mb-4">
+                <h2 class="font-bold text-center">O circuito</h2>
+                <p class="text-center">O Circuito Ibra foi criado para realizar um alto padrão de um evento de tênis de mesa, seguindo como
+                    referência, os padrões da CBTM e a ITTF e proporcionar para os praticantes um ambiente propício para
+                    competições, proporcionando aos atletas locais, e estaduais, uma opção acessível e estruturalmente
+                    organizada para torneio.</p>
+            </article>
+
+            <article class="mb-4">
+                <h2 class="font-bold text-center">5ª edição</h2>
+                <p class="text-center">O circuito a partir desta 5ª edição será realizado para mesatenistas federados ou praticantes do jogo
+                    olímpico e para pessoas que praticam como lazer o ping pong, em categorias separadas, com o objetivo
+                    de massificar ainda mais adeptos para o tênis de mesa. Esta temporada contará com seis etapas e uma
+                    grade final em dezembro deste ano (2023)</p>
+            </article>
+        </section>
+
+    </main>
 </body>
+
 </html>
