--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 
     <title>Academia Ibra</title>
 </head>
 
-<body>
-    <header class=" flex items-center justify-between py-1 px-1">
+<body class="bg-blue-950">
+    <header class=" flex items-center justify-between py-1 px-1 bg-white">
         <img src="src/images/logo.jpeg" class="object-fill h-16" alt="">
         <nav class="hidden">
             <ul class="uppercase flex gap-x-2">
@@ -28,41 +32,30 @@
         <!-- <i class="fa-solid fa-xmark"></i> -->
     </header>
 
-    <main class="bg-slate-500">
-        <section class="pt-4">
-            <article class="mb-4">
-                <h2 class="font-bold text-center">Sobre o circuito</h2>
-                <p class="text-center">O Circuito Ibra de Tênis de Mesa & Ping Pong, foi criado com o intuito de massificar a modalidade em
+    <main>
+        <section class="pt-4 flex flex-col items-center">
+            <article class="mb-4 w-3/4 p-4 text-white">
+                <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow">O circuito</h2>
+                <p class="text-justify font-roboto">O <span class="italic">Circuito Ibra de Tênis de Mesa & Ping Pong</span>, foi
+                    criado com o intuito de massificar a modalidade em
                     Pernambuco, sendo realizado através da Academia Ibra de Tênis de Mesa, primeiro clube especializado
-                    do interior do Estado que possui sede própria em Caruaru.</p>
+                    do interior do Estado que possui sede própria em Caruaru. Já tendo ocorrido em 1999, 2000, 2001 e
+                    2002, o circuito entra agora
+                    para sua 5ª edição.</p>
             </article>
-
-            <article class="mb-4">
-                <h2 class="font-bold text-center">História</h2>
-                <p class="text-center">O Circuito Ibra de Tênis de Mesa & Ping Pong, já aconteceu em 1999, 2000, 2001 e 2002, e entra agora
-                    para sua 5ª edição. Este evento foi o grande responsável pela popularização do Tênis de Mesa no
-                    interior do estado, sendo realizado ao longo das suas edições em várias cidades do interior,
-                    shoppings, com participação de atletas do interior, região metropolitana e de outros estados.</p>
-            </article>
-
-            <article class="mb-4">
-                <h2 class="font-bold text-center">O circuito</h2>
-                <p class="text-center">O Circuito Ibra foi criado para realizar um alto padrão de um evento de tênis de mesa, seguindo como
-                    referência, os padrões da CBTM e a ITTF e proporcionar para os praticantes um ambiente propício para
-                    competições, proporcionando aos atletas locais, e estaduais, uma opção acessível e estruturalmente
-                    organizada para torneio.</p>
-            </article>
-
-            <article class="mb-4">
-                <h2 class="font-bold text-center">5ª edição</h2>
-                <p class="text-center">O circuito a partir desta 5ª edição será realizado para mesatenistas federados ou praticantes do jogo
-                    olímpico e para pessoas que praticam como lazer o ping pong, em categorias separadas, com o objetivo
-                    de massificar ainda mais adeptos para o tênis de mesa. Esta temporada contará com seis etapas e uma
-                    grade final em dezembro deste ano (2023)</p>
-            </article>
-        </section>
-
+        </section>    
     </main>
+
+    <footer class="bg-green-950 text-white flex flex-col items-center font-roboto py-4 text-sm absolute bottom-0 w-full">
+        <p class="uppercase">Academia Ibra de Tênis de Mesa</p>
+        <div class="footer__icons flex gap-x-3 pt-2">
+            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-regular fa-envelope"></i>
+            <i class="fa-solid fa-location-dot"></i>
+        </div>
+
+    </footer>
 </body>
 
 </html>
