Finishing mobile view

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <main>
-        <section class="pt-4 flex flex-col items-center">
+        <section class="pt-4 flex flex-col items-center absolute top-1/2 -translate-y-1/2">
             <article class="mb-4 w-3/4 p-4 text-white">
                 <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow">O circuito</h2>
                 <p class="text-justify font-roboto">O <span class="italic">Circuito Ibra de Tênis de Mesa & Ping Pong</span>, foi
