Starting desktop version

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 </head>
 
 <body class="bg-blue-950">
-    <header class=" flex items-center justify-between py-1 px-1 bg-white">
+    <header class=" flex items-center justify-between py-1 px-1 bg-white laptop:px-4">
         <img src="src/images/logo.jpeg" class="object-fill h-16" alt="">
-        <nav class="hidden">
+        <nav class="hidden laptop:block">
             <ul class="uppercase flex gap-x-2">
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Regulamento</a></li>
             </ul>
         </nav>
-        <a href="#" class="text-white bg-red-600 py-1 px-2 rounded hidden">Inscreva-se</a>
-        <i class="fa-solid fa-bars pr-3 text-2xl"></i>
-        <!-- <i class="fa-solid fa-xmark"></i> -->
+        <a href="#" class="text-white bg-red-600 py-1 px-2 rounded hidden laptop:block laptop:px-4">Inscreva-se</a>
+        <i class="fa-solid fa-bars pr-3 text-2xl inline-block laptop:!hidden"></i>
+        <i class="fa-solid fa-xmark !hidden"></i>
     </header>
 
     <main>
