--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class=" flex items-center justify-between py-1 px-1 bg-white laptop:px-4">
         <img src="src/images/logo.jpeg" class="object-fill h-16" alt="">
         <nav class="hidden laptop:block">
-            <ul class="uppercase flex gap-x-2">
+            <ul class="uppercase flex gap-x-2 laptop:gap-x-4">
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Regulamento</a></li>
             </ul>
@@ -33,10 +33,11 @@
     </header>
 
     <main>
-        <section class="pt-4 flex flex-col items-center absolute top-1/2 -translate-y-1/2">
-            <article class="mb-4 w-3/4 p-4 text-white">
-                <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow">O circuito</h2>
-                <p class="text-justify font-roboto">O <span class="italic">Circuito Ibra de Tênis de Mesa & Ping Pong</span>, foi
+        <section class="pt-4 flex flex-col items-center absolute top-1/2 -translate-y-1/2 laptop:flex-row laptop:justify-center">
+            <img src="src/images/circuito.jpg" class="hidden rounded-xl object-contain h-80 w-1/3 laptop:block" alt="">
+            <article class="mb-4 w-3/4 p-4 text-white laptop:w-1/3">
+                <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow laptop:w-2/3 laptop:mx-auto">O circuito</h2>
+                <p class="text-justify font-roboto laptop:w-2/3 laptop:mx-auto">O <span class="italic">Circuito Ibra de Tênis de Mesa & Ping Pong</span>, foi
                     criado com o intuito de massificar a modalidade em
                     Pernambuco, sendo realizado através da Academia Ibra de Tênis de Mesa, primeiro clube especializado
                     do interior do Estado que possui sede própria em Caruaru. Já tendo ocorrido em 1999, 2000, 2001 e
