--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#">Regulamento</a></li>
             </ul>
         </nav>
-        <a href="#" class="text-white bg-red-600 py-1 px-2 rounded hidden laptop:block laptop:px-4">Inscreva-se</a>
+        <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" class="text-white bg-red-600 py-1 px-2 rounded hidden laptop:block laptop:px-4" target="_blank">Inscreva-se</a>
         <i class="fa-solid fa-bars pr-3 text-2xl inline-block laptop:!hidden"></i>
         <i class="fa-solid fa-xmark !hidden"></i>
     </header>
@@ -50,10 +50,10 @@
     <footer class="bg-green-950 text-white flex flex-col items-center font-roboto py-4 text-sm absolute bottom-0 w-full">
         <p class="uppercase">Academia Ibra de Tênis de Mesa</p>
         <div class="footer__icons flex gap-x-3 pt-2">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-regular fa-envelope"></i>
-            <i class="fa-solid fa-location-dot"></i>
+            <a href="https://api.whatsapp.com/send?phone=81993139096&text=Como%20podemos%20ajudá-lo?" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/ibratdm/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-regular fa-envelope"></i></a>
+            <a href="https://goo.gl/maps/URWJewrQ4PqbPD8a9?coh=178571&entry=tt" target="_blank"><i class="fa-solid fa-location-dot"></i></a>
         </div>
 
     </footer>
