--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <title>Academia Ibra</title>
 </head>
@@ -27,33 +28,41 @@
                 <li><a href="#">Regulamento</a></li>
             </ul>
         </nav>
-        <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" class="text-white bg-red-600 py-1 px-2 rounded hidden laptop:block laptop:px-4" target="_blank">Inscreva-se</a>
+        <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
+            class="text-white bg-red-600 py-1 px-2 rounded hover:bg-black hover:transition hover:duration-700 hidden laptop:block laptop:px-4 animate__animated animate__pulse animate__infinite infinite"
+            target="_blank">Inscreva-se</a>
         <i class="fa-solid fa-bars pr-3 text-2xl inline-block laptop:!hidden"></i>
         <i class="fa-solid fa-xmark !hidden"></i>
     </header>
 
     <main>
-        <section class="pt-4 flex flex-col items-center absolute top-1/2 -translate-y-1/2 laptop:flex-row laptop:justify-center">
+        <section
+            class="pt-4 flex flex-col items-center absolute top-1/2 -translate-y-1/2 laptop:flex-row laptop:justify-center">
             <img src="src/images/circuito.jpg" class="hidden rounded-xl object-contain h-80 w-1/3 laptop:block" alt="">
             <article class="mb-4 w-3/4 p-4 text-white laptop:w-1/3">
-                <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow laptop:w-2/3 laptop:mx-auto">O circuito</h2>
-                <p class="text-justify font-roboto laptop:w-2/3 laptop:mx-auto">O <span class="italic">Circuito Ibra de Tênis de Mesa & Ping Pong</span>, foi
+                <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow laptop:w-2/3 laptop:mx-auto">O
+                    circuito</h2>
+                <p class="text-justify font-roboto laptop:w-2/3 laptop:mx-auto">O <span class="italic">Circuito Ibra de
+                        Tênis de Mesa & Ping Pong</span>, foi
                     criado com o intuito de massificar a modalidade em
                     Pernambuco, sendo realizado através da Academia Ibra de Tênis de Mesa, primeiro clube especializado
                     do interior do Estado que possui sede própria em Caruaru. Já tendo ocorrido em 1999, 2000, 2001 e
                     2002, o circuito entra agora
                     para sua 5ª edição.</p>
             </article>
-        </section>    
+        </section>
     </main>
 
-    <footer class="bg-green-950 text-white flex flex-col items-center font-roboto py-4 text-sm absolute bottom-0 w-full">
+    <footer
+        class="bg-green-950 text-white flex flex-col items-center font-roboto py-4 text-sm absolute bottom-0 w-full">
         <p class="uppercase">Academia Ibra de Tênis de Mesa</p>
         <div class="footer__icons flex gap-x-3 pt-2">
-            <a href="https://api.whatsapp.com/send?phone=81993139096&text=Como%20podemos%20ajudá-lo?" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=81993139096&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
+                    class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/ibratdm/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-regular fa-envelope"></i></a>
-            <a href="https://goo.gl/maps/URWJewrQ4PqbPD8a9?coh=178571&entry=tt" target="_blank"><i class="fa-solid fa-location-dot"></i></a>
+            <a href="https://goo.gl/maps/URWJewrQ4PqbPD8a9?coh=178571&entry=tt" target="_blank"><i
+                    class="fa-solid fa-location-dot"></i></a>
         </div>
 
     </footer>
