--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <title>Academia Ibra</title>
 </head>
 
-<body class="bg-blue-950">
+<body class="bg-blue-950 box-border">
     <header class=" flex items-center justify-between py-1 px-1 bg-white laptop:px-4">
         <img src="src/images/logo.jpeg" class="object-fill h-16" alt="">
         <nav class="hidden laptop:block">
             <ul class="uppercase flex gap-x-2 laptop:gap-x-4">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Regulamento</a></li>
+                <li><a href="#" class="hover:border-b-2 hover:border-solid hover:border-b-gray-950 hover:trasition hover:duration-200">Início</a></li>
+                <li><a href="#" class="hover:border-b-2 hover:border-solid hover:border-b-gray-950 hover:trasition hover:duration-200">Regulamento</a></li>
             </ul>
         </nav>
         <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
@@ -36,9 +36,8 @@
     </header>
 
     <main>
-        <section
-            class="pt-4 flex flex-col items-center absolute top-1/2 -translate-y-1/2 laptop:flex-row laptop:justify-center">
-            <img src="src/images/circuito.jpg" class="hidden rounded-xl object-contain h-80 w-1/3 laptop:block" alt="">
+        <section class="pt-2 flex flex-col items-center absolute top-1/2 -translate-y-1/2 laptop:flex-row laptop:justify-center">
+            <img src="src/images/circuito 2.jpeg" class="h-40 rounded-xl object-contain w-4/12 laptop:h-80" alt="">
             <article class="mb-4 w-3/4 p-4 text-white laptop:w-1/3">
                 <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow laptop:w-2/3 laptop:mx-auto">O
                     circuito</h2>
