--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <img src="src/images/logo.jpeg" class="object-fill h-16" alt="">
         <nav class="hidden laptop:block">
             <ul class="uppercase flex gap-x-2 laptop:gap-x-4">
-                <li><a href="#" class="hover:border-b-2 hover:border-solid hover:border-b-gray-950 hover:trasition hover:duration-200">Início</a></li>
-                <li><a href="#" class="hover:border-b-2 hover:border-solid hover:border-b-gray-950 hover:trasition hover:duration-200">Regulamento</a></li>
+                <li><a href="#" class="nav__items">Início</a></li>
+                <li><a href="#" class="nav__items">Regulamento</a></li>
             </ul>
         </nav>
         <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
-            class="text-white bg-red-600 py-1 px-2 rounded hover:bg-black hover:transition hover:duration-700 hidden laptop:block laptop:px-4 animate__animated animate__pulse animate__infinite infinite"
-            target="_blank">Inscreva-se</a>
+            class="text-white bg-red-600 py-1 px-2 rounded button__movement" target="_blank">Inscreva-se</a>
         <i class="fa-solid fa-bars pr-3 text-2xl inline-block laptop:!hidden"></i>
         <i class="fa-solid fa-xmark !hidden"></i>
     </header>
 
     <main>
-        <section class="pt-2 flex flex-col items-center absolute top-1/2 -translate-y-1/2 laptop:flex-row laptop:justify-center">
+        <section
+            class="pt-2 flex flex-col items-center absolute top-1/2 -translate-y-1/2 laptop:flex-row laptop:justify-center">
             <img src="src/images/circuito 2.jpeg" class="h-40 rounded-xl object-contain w-4/12 laptop:h-80" alt="">
             <article class="mb-4 w-3/4 p-4 text-white laptop:w-1/3">
                 <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow laptop:w-2/3 laptop:mx-auto">O
