--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
-            class="text-white bg-red-600 py-1 px-2 rounded button__movement" target="_blank">Inscreva-se</a>
+            class="hidden text-white bg-red-600 py-1 px-2 rounded button__movement laptop:block" target="_blank">Inscreva-se</a>
         <i class="fa-solid fa-bars pr-3 text-2xl inline-block laptop:!hidden"></i>
         <i class="fa-solid fa-xmark !hidden"></i>
     </header>
