--- a/index.html
+++ b/index.html
@@ -1,70 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="dist/output.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <title>Academia Ibra</title>
+    <title>Ibra Academia</title>
 </head>
 
-<body class="bg-blue-950 box-border">
-    <header class=" flex items-center justify-between py-1 px-1 bg-white laptop:px-4">
-        <img src="src/images/logo.jpeg" class="object-fill h-16" alt="">
-        <nav class="hidden laptop:block">
-            <ul class="uppercase flex gap-x-2 laptop:gap-x-4">
-                <li><a href="#" class="nav__items">Início</a></li>
-                <li><a href="#" class="nav__items">Regulamento</a></li>
+<body>
+    <header class="flex items-center justify-between p-2">
+        <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
+        <nav class="hidden">
+            <ul>
+                <li>Início</li>
+                <li>Sobre</li>
             </ul>
         </nav>
-        <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
-            class="hidden text-white bg-red-600 py-1 px-2 rounded button__movement laptop:block" target="_blank">Inscreva-se</a>
-        <i class="fa-solid fa-bars pr-3 text-2xl inline-block laptop:!hidden"></i>
-        <i class="fa-solid fa-xmark !hidden"></i>
-    </header>
+        <a href="#" class="hidden">Circuito Ibra</a>
 
-    <main>
-        <section
-            class="pt-2 flex flex-col items-center absolute top-1/2 -translate-y-1/2 laptop:flex-row laptop:justify-center">
-            <img src="src/images/circuito 2.jpeg" class="h-40 rounded-xl object-contain w-4/12 laptop:h-80" alt="">
-            <article class="mb-4 w-3/4 p-4 text-white laptop:w-1/3">
-                <h2 class="font-bold text-center uppercase text-4xl pb-2 font-barlow laptop:w-2/3 laptop:mx-auto">O
-                    circuito</h2>
-                <p class="text-justify font-roboto laptop:w-2/3 laptop:mx-auto">O <span class="italic">Circuito Ibra de
-                        Tênis de Mesa & Ping Pong</span>, foi
-                    criado com o intuito de massificar a modalidade em
-                    Pernambuco, sendo realizado através da Academia Ibra de Tênis de Mesa, primeiro clube especializado
-                    do interior do Estado que possui sede própria em Caruaru. Já tendo ocorrido em 1999, 2000, 2001 e
-                    2002, o circuito entra agora
-                    para sua 5ª edição.</p>
-            </article>
-        </section>
-    </main>
-
-    <footer
-        class="bg-green-950 text-white flex flex-col items-center font-roboto py-4 text-sm absolute bottom-0 w-full">
-        <p class="uppercase">Academia Ibra de Tênis de Mesa</p>
-        <div class="footer__icons flex gap-x-3 pt-2">
-            <a href="https://api.whatsapp.com/send?phone=81993139096&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
-                    class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://www.instagram.com/ibratdm/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-regular fa-envelope"></i></a>
-            <a href="https://goo.gl/maps/URWJewrQ4PqbPD8a9?coh=178571&entry=tt" target="_blank"><i
-                    class="fa-solid fa-location-dot"></i></a>
+        <div id="header__container--icons">
+            <img src="src/images/bar.png" class="h-10" alt="Ícone do menu">
+            <img src="src/images/close.png" class="h-10 hidden" alt="Ícone para fechar o menu">
         </div>
-
-    </footer>
+    </header>
+    
 </body>
-
 </html>
