--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <img src="src/images/close.png" class="h-10 hidden" alt="Ícone para fechar o menu">
         </div>
     </header>
+
+    <main>
+        <img src="src/images/bg-mobile.png" class="lg:hidden" alt="Plano de fundo do circuito Ibra 2023">
+        <img src="src/images/bg-desktop.png" class="hidden lg:block" alt="Plano de fundo do circuito Ibra 2023">
+    </main>
     
 </body>
 </html>
