--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="dist/output.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Ibra Academia</title>
 </head>
@@ -23,8 +24,8 @@
         <a href="#" class="hidden">Circuito Ibra</a>
 
         <div id="header__container--icons">
-            <img src="src/images/bar.png" class="h-10" alt="Ícone do menu">
-            <img src="src/images/close.png" class="h-10 hidden" alt="Ícone para fechar o menu">
+            <img src="src/images/bar.png" class="h-8" alt="Ícone do menu">
+            <img src="src/images/close.png" class="h-8 hidden" alt="Ícone para fechar o menu">
         </div>
     </header>
 
@@ -33,5 +34,14 @@
         <img src="src/images/bg-desktop.png" class="hidden lg:block" alt="Plano de fundo do circuito Ibra 2023">
     </main>
     
+    <footer class="bg-green-950 text-white flex flex-col items-center gap-y-2 py-2">
+        <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
+        <div id="footer__container--icons" class="flex gap-x-4">
+            <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/ibratdm/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
+            <a href="#"><i class="fa-regular fa-envelope" target="_blank"></i></a>
+            <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt"><i class="fa-solid fa-location-dot" target="_blank"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
