--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <a href="#" class="hidden">Circuito Ibra</a>
 
         <div id="header__container--icons">
-            <img src="src/images/bar.png" class="h-8" alt="Ícone do menu">
-            <img src="src/images/close.png" class="h-8 hidden" alt="Ícone para fechar o menu">
+            <img src="src/images/bar.png" id="header__icons--menu" class="h-8" alt="Ícone do menu">
+            <img src="src/images/close.png" id="header__icons--arrow" class="h-8 hidden" alt="Ícone para fechar o menu">
         </div>
     </header>
 
@@ -39,9 +39,11 @@
         <div id="footer__container--icons" class="flex gap-x-4">
             <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/ibratdm/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
-            <a href="#"><i class="fa-regular fa-envelope" target="_blank"></i></a>
-            <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt"><i class="fa-solid fa-location-dot" target="_blank"></i></a>
+            <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+            <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt" target="_blank"><i class="fa-solid fa-location-dot"></i></a>
         </div>
     </footer>
+
+    <script src="src/js/main.js"></script>
 </body>
 </html>
