--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="flex items-center justify-between p-2">
         <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
-        <nav class="hidden">
+        <nav class="hidden bg-slate-600 h-screen w-screen absolute top-14 right-0 pl-4">
             <ul>
                 <li>Início</li>
                 <li>Sobre</li>
