Updating js and apply

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 <body>
     <header class="flex items-center justify-between p-2 font-barlow">
         <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
-        <nav class="hidden bg-slate-600 h-screen w-screen absolute top-14 right-0 pl-4">
+        <nav class=" bg-slate-600 h-screen w-screen absolute top-14 right-0 p-4 uppercase">
             <ul>
-                <li>Início</li>
-                <li>Sobre</li>
+                <li class="border-b-2 border-black border-solid py-1">Início</li>
+                <li class="border-b-2 border-black border-solid py-1">Sobre</li>
+                <li class="border-b-2 border-black border-solid py-1">Entre em contato</li>
             </ul>
         </nav>
         <a href="#" class="hidden">Circuito Ibra</a>
@@ -39,7 +40,7 @@
             <img src="src/images/bg-desktop.png" class="hidden lg:block" alt="Plano de fundo do circuito Ibra 2023">
         </div>
 
-        <a href="#" class="bg-slate-500 py-2 rounded text-white flex justify-center w-1/2 text-sm font-barlow uppercase button__position">Mais informações</a>
+        <a href="#" id="main__button" class="main__button--style button__position button__hover">Mais informações</a>
     </main>
     
     <footer class="bg-green-950 text-white flex flex-col items-center gap-y-2 py-2 font-barlow">
