Updating hover elements

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <header class="flex items-center justify-between p-2 font-barlow">
         <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-14 right-0 p-4 uppercase animate__animated animate__slideInDown
-        lg:bg-white lg:block lg:static lg:h-auto">
+        lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black"><a href="">Início</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black"><a href="">Sobre</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black"><a href="">Parceiros</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black"><a href="">O circuito</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black"><a href="">Contato</a></li>
+                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Início</a></li>
+                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Sobre</a></li>
+                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Parceiros</a></li>
+                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">O circuito</a></li>
+                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Contato</a></li>
             </ul>
         </nav>
         <a href="#" class="hidden">Circuito Ibra</a>
