--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Início</a></li>
                 <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Sobre</a></li>
                 <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Parceiros</a></li>
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">O circuito</a></li>
+                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="circuito.html">O circuito</a></li>
                 <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover"><a href="">Contato</a></li>
             </ul>
         </nav>
@@ -47,7 +47,7 @@
 
     </main>
     
-    <footer class="bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow">
+    <footer class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow">
         <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
         <div id="footer__container--icons" class="flex gap-x-4">
             <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
