Updating regulamento page

--- a/circuito.html
+++ b/circuito.html
@@ -32,7 +32,7 @@
                 </li>
 
                 <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
-                    <a href="">Regulamento</a>
+                    <a href="regulamento.html">Regulamento</a>
                 </li>
 
                 <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
