--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
         <div id="main__container--images" class="bg-green-950 h-screen flex flex-col items-center justify-center gap-y-4">
             <h1 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h1>
-            <a href="#" id="main__button" class="main__button--style button__hover">Mais informações</a>
+            <a href="circuito.html" id="main__button" class="main__button--style button__hover">Mais informações</a>
         </div>
 
     </main>
