--- a/circuito.html
+++ b/circuito.html
@@ -51,4 +51,6 @@
     <main class="bg-green-950 flex items-center justify-around">
         <img src="src/images/circuito-layout.jpeg" class="object-cover w-1/2" alt="Informações sobre o circuito">
     </main>
+
+    <script src="src/js/main.js"></script>
 </body>
