Refactoring js media

--- a/regulamento.html
+++ b/regulamento.html
@@ -52,9 +52,9 @@
         </div>
     </header>
 
-    <main class="bg-green-950 flex items-center justify-around">
-        <section class="text-white font-barlow flex flex-col items-center gap-y-4 w-10/12">
-            <h1 class="text-lg font-semibold uppercase text-center py-4 w-3/4">Regulamento Circuito Ibra de Tênis de
+    <main class="bg-green-950 flex justify-around">
+        <section class="text-white font-barlow flex flex-col gap-y-4 w-10/12">
+            <h1 class="text-lg font-semibold uppercase text-center py-4">Regulamento Circuito Ibra de Tênis de
                 Mesa e Ping Pong</h1>
             <article>
                 <h3 class="font-semibold uppercase">Sobre o circuito:</h3>
