--- a/circuito.html
+++ b/circuito.html
@@ -49,7 +49,7 @@
     </header>
 
     <main class="bg-green-950 flex items-center justify-around">
-        <img src="src/images/circuito-layout.jpeg" class="object-cover w-1/2" alt="Informações sobre o circuito">
+        <img src="src/images/circuito-layout.jpeg" class="object-contain h-screen" alt="Informações sobre o circuito">
     </main>
 
     <script src="src/js/main.js"></script>
