Updating circuito sizes

--- a/circuito.html
+++ b/circuito.html
@@ -48,8 +48,8 @@
         </div>
     </header>
 
-    <main class="bg-blue-950 flex items-center justify-around">
-        <img src="src/images/circuito-layout.jpeg" class="object-contain h-screen" alt="Informações sobre o circuito">
+    <main class="bg-blue-950 h-screen lg:flex lg:items-center lg:justify-around">
+        <img src="src/images/circuito-layout.jpeg" class="lg:object-contain lg:h-screen" alt="Informações sobre o circuito">
     </main>
 
     <script src="src/js/main.js"></script>
