--- a/regulamento.html
+++ b/regulamento.html
@@ -54,7 +54,7 @@
 
     <main class="bg-blue-950 flex justify-around">
         <section class="text-white font-barlow flex flex-col gap-y-4 w-10/12 lg:w-7/12">
-            <h1 class="text-2xl uppercase text-center py-4">Regulamento Circuito Ibra de Tênis de
+            <h1 class="text-2xl uppercase text-center py-4 lg:text-3xl lg:py-8">Regulamento Circuito Ibra de Tênis de
                 Mesa e Ping Pong</h1>
             <article>
                 <h3 class="uppercase text-xl">Sobre o circuito:</h3>
